tests/NormalTests/paczka2/big_fuzzy/24735361.err
Error in line 6: pAeKLK S331 52,85
Error in line 14: nm2anM7 A110 45,0
Error in line 10: 0aThIh A110 71,5
Error in line 20: 0aThIh A580 72,4
Error in line 19: nm2anM7 S331 54,4
Error in line 2: pAeKLK A580 85,9
Error in line 22: nm2anM7 A903 48,8
Error in line 37: pAeKLK S331 1,5
Error in line 40: pPVo1zj A903 67,0
Error in line 44: MZYODEHj A903 9,6
Error in line 45: MZYODEHj S331 21,4
Error in line 47: pAeKLK A580 145,9
Error in line 76: MZYODEHj A903 18,1
Error in line 79: MZYODEHj A110 35,0
Error in line 77: nm2anM7 A903 94,7
Error in line 101: A110 A110 5,5
Error in line 105: nm2anM7 A903 61,0
Error in line 113: 0aThIh A580 30,5
Error in line 93: pPVo1zj A580 95,1
Error in line 116: nm2anM7 S331 154,5
Error in line 117: pPVo1zj A110 32,3
Error in line 134: zg1xl A110 s9,6
Error in line 131: A110 A903 136,2
Error in line 153: A110 A580 13,4
Error in line 155: 0aThIh A903 31,8
Error in line 163: nm2anM7 S331 47,7
Error in line 165: pPVo1zj A903 84,8
Error in line 168: pPVo1zj A580 66,6
Error in line 179: pPVo1zj A903 45,5
Error in line 184: zg1xl A903 17,8
Error in line 188: nm2anM7 S331 97,6
Error in line 186: zg1xl A580 50,0
Error in line 205: pPVo1zj A580 50,2
Error in line 212: zg1xl A110 37,5
Error in line 218: zg1xl A903 175,7
Error in line 229: pPVo1zj S331 41,22
Error in line 224: nm2anM7 A903 99,7
Error in line 228: pPVo1zj S331 93,6
